--- a/Projects/D3-S4-L21/CSS.html
+++ b/Projects/D3-S4-L21/CSS.html
@@ -16,6 +16,7 @@
             margin: 0;
             color: red;
         }
+
     </style>
 </head>
 
@@ -24,5 +25,8 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis sequi, inventore vel eligendi. Itaque adipisci quo commodi fugit accusamus consectetur, odit incidunt harum et atque quia, delectus cupiditate nesciunt asperiores.</p>
     <h2>Nagłówek h2</h2>
     <h3>Nagłówek h3</h3>
+    <h4>Nagłówek h4</h4>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis sequi, inventore vel eligendi. Itaque adipisci quo commodi fugit accusamus consectetur, odit incidunt harum et atque quia, delectus cupiditate nesciunt asperiores.</p>
-</body></html>
+</body>
+
+</html>
